--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="#">Commit 2</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#">Commit 3</a>
                     </li>
 
                 </ul>
