--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
                     Commit 4 <br> Git y Git Hub
                 </h1>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                    Commit 5: Hacer por lo menos 5 commits desde vs code y respaldados en el Git Hub al fork del desafio.
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
